<resources>
    <string name="app_name">Dicoding Story</string>
    <string name="add_story_button">Add story button</string>
    <string name="switch_camera_button">Switch camera button.</string>
    <string name="gallery_button">Gallery button.</string>
    <string name="cover">Cover</string>
    <string name="camera_button">Camera button.</string>
    <string name="your_story">Your story ....</string>
    <string name="upload">Upload</string>
    <string name="story">Story</string>
    <string name="story_title">Story\'s Title</string>
    <string name="dummy_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent ut porta velit. Vivamus sodales, dolor quis tristique sollicitudin, risus metus imperdiet nisi, nec bibendum neque nisl non dui. Mauris et magna id tortor venenatis vehicula. Vestibulum interdum turpis eget dui consequat, eget sodales enim consequat. Curabitur gravida quam sed enim efficitur, sit amet interdum eros tristique. Quisque sit amet lacus non ipsum ultricies scelerisque. Pellentesque at ultricies tortor. Suspendisse posuere quam nunc, id volutpat nisi euismod sit amet. Donec quam nisl, dignissim sit amet neque ac, pellentesque convallis dui. Nulla sagittis enim eu diam laoreet, sed lobortis ipsum varius.</string>
    <string name="dicoding_stories">Dicoding\'s stories ....</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="continue_as_guest">Continue as guest.</string>
    <string name="welcome_image">Welcome image.</string>
    <string name="welcome_in_dicoding">Welcome in Dicoding!</string>
    <string name="message_welcome_page">Want to learn Android, iOS, Machine Learning, Cloud, Front-End, Back-End, and other IT fields? Learn at Dicoding!</string>
    <string name="login_image">Login image</string>
    <string name="register_image">Register image.</string>
    <string name="log_out">Log Out.</string>
    <string name="error_password_to_short">Password must be at least 8 characters.</string>
    <string name="error_invalid_email">Invalid email format.</string>
    <string name="error_invalid_name">Name must contain only letters and spaces.</string>
    <string name="map_view">Map</string>
    <string name="title_activity_maps_view">Maps View</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="include_location">Include Location</string>
    <string name="retry">Try Again</string>
    <string name="user_name">User Name</string>
    <string name="register_sign">Doesn\'t have an account? Let\'s register.</string>
    <string name="log_in_sign">Already have an account? Let\'s log in.</string>
</resources>