<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.NewStoryActivity">

    <ImageView
        android:id="@+id/iv_cover"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/cover"
        android:src="@drawable/ic_insert_photo_24"
        app:tint="?attr/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:id="@+id/ib_camera"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/camera_button"
        app:layout_constraintTop_toBottomOf="@id/iv_cover"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_photo_camera_24"
        android:background="@drawable/circle_background"
        android:scaleType="centerInside"
        android:padding="10dp"
        app:tint="?attr/colorSecondary"
        android:layout_marginVertical="16dp"/>

    <EditText
        android:id="@+id/et_story"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="16dp"
        android:importantForAutofill="no"
        android:inputType="text"
        android:hint="@string/your_story"
        app:layout_constraintTop_toBottomOf="@id/ib_camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/edit_text_background"
        android:padding="10dp"
        android:gravity="top"/>

    <Button
        android:id="@+id/bt_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_story"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="32dp"
        android:text="@string/upload"
        android:textSize="20sp"
        android:textColor="?attr/colorSecondary"/>

</androidx.constraintlayout.widget.ConstraintLayout>