<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    card_view:cardCornerRadius="8dp">

    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical"
        android:contentDescription="@string/story">

        <ImageView
            android:id="@+id/iv_story_cover"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            tools:src="@tools:sample/avatars"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_story_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/story_title"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/tv_story_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_text"
            android:textColor="?attr/colorPrimary"
            android:alpha="0.5"
            android:textSize="15sp"
            android:maxLines="2"
            android:ellipsize="end"
            tools:ignore="SmallSp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>