<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.activity.LogInActivity">

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_background"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:hint="@string/e_mail"
        android:padding="10dp"
        android:layout_marginVertical="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableStart="@drawable/ic_email_24"
        android:drawableTint="?attr/colorAccent"
        android:drawablePadding="10dp"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_background"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:padding="10dp"
        android:layout_marginVertical="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:drawableStart="@drawable/ic_lock_24"
        android:drawableTint="?attr/colorAccent"
        android:drawablePadding="10dp"
        android:drawableEnd="@drawable/ic_visibility_24" />

    <Button
        android:id="@+id/bt_log_in"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/log_in"
        android:background="@drawable/button_background"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginVertical="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>